--- a/charts/coturn/templates/service.yaml
+++ b/charts/coturn/templates/service.yaml
@@ -2,9 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "coturn.fullname" . }}
+  name: coturn
   labels:
-    {{- include "coturn.labels" . | nindent 4 }}
+    app: coturn
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   # Needs to be headless
   # See: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/
@@ -22,5 +25,9 @@ spec:
       port: {{ .Values.coturnTurnTlsListenPort }}
       targetPort: coturn-tls
     {{- end }}
+    - name: status-http
+      port: {{ .Values.coturnMetricsListenPort }}
+      targetPort: status-http
   selector:
-    {{- include "coturn.selectorLabels" . | nindent 4 }}
+    app: coturn
+    release: {{ .Release.Name }}
