test for pemkeys

--- a/libs/types-common/types-common.cabal
+++ b/libs/types-common/types-common.cabal
@@ -149,6 +149,7 @@ test-suite tests
   main-is:            Main.hs
   other-modules:
     Paths_types_common
+    Test.Data.PEMKeys
     Test.Domain
     Test.Handle
     Test.Properties
