pem bundle interpreter and config

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -293,5 +293,8 @@ data:
       {{- if .setDpopTokenExpirationTimeSecs }}
       setDpopTokenExpirationTimeSecs: {{ .setDpopTokenExpirationTimeSecs }}
       {{- end }}
+      {{- if .setPublicKeyBundle }}
+      setPublicKeyBundle: {{ .setPublicKeyBundle }}
+      {{- end }}
     {{- end }}
   {{- end }}
