--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -191,6 +191,7 @@ optSettings:
   setNonceTtlSecs: 5
   setDpopMaxSkewSecs: 1
   setDpopTokenExpirationTimeSecs: 300 # 5 minutes
+  setPublicKeyBundle: test/resources/jwt/ed25519_bundle.pem
 
 logLevel: Warn
 # ^ NOTE: We log too much in brig, if we set this to Info like other services, running tests
