rusty-jwt-tools via nix

--- a/libs/jwt-tools/jwt-tools.cabal
+++ b/libs/jwt-tools/jwt-tools.cabal
@@ -11,65 +11,6 @@ license:       AGPL-3
 license-file:  LICENSE
 build-type:    Simple
 
-executable jwt-tools
-  main-is:            src/Main.hs
-  other-modules:      Paths_jwt_tools
-  default-extensions:
-    NoImplicitPrelude
-    AllowAmbiguousTypes
-    BangPatterns
-    ConstraintKinds
-    DataKinds
-    DefaultSignatures
-    DeriveFunctor
-    DeriveGeneric
-    DeriveLift
-    DeriveTraversable
-    DerivingStrategies
-    DerivingVia
-    EmptyCase
-    FlexibleContexts
-    FlexibleInstances
-    FunctionalDependencies
-    GADTs
-    InstanceSigs
-    KindSignatures
-    LambdaCase
-    MultiParamTypeClasses
-    MultiWayIf
-    NamedFieldPuns
-    OverloadedStrings
-    PackageImports
-    PatternSynonyms
-    PolyKinds
-    QuasiQuotes
-    RankNTypes
-    ScopedTypeVariables
-    StandaloneDeriving
-    TupleSections
-    TypeApplications
-    TypeFamilies
-    TypeFamilyDependencies
-    TypeOperators
-    UndecidableInstances
-    ViewPatterns
-
-  ghc-options:
-    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
-    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
-
-  build-depends:
-      base
-    , base64-bytestring
-    , bytestring
-    , http-types
-    , imports
-    , jwt-tools
-    , types-common
-    , wire-api
-
-  default-language:   Haskell2010
-
 library
   exposed-modules:    Jwt.Tools
   hs-source-dirs:     src
@@ -117,6 +58,7 @@ library
   ghc-options:
     -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
     -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -static
 
   build-depends:
       base
@@ -133,3 +75,77 @@ library
 
   default-language:   Haskell2010
   other-extensions:   ForeignFunctionInterface
+  extra-libraries:
+    rusty_jwt_tools_ffi
+    pthread
+
+-- executable-dynamic: True
+-- shared:             True
+
+test-suite jwt-tools-tests
+  main-is:            Spec.hs
+  type:               exitcode-stdio-1.0
+  build-depends:
+      base
+    , base64-bytestring
+    , bytestring
+    , bytestring-conversion
+    , either
+    , extra
+    , hspec
+    , http-types
+    , imports
+    , jwt-tools
+    , QuickCheck
+    , string-conversions
+    , text
+    , transformers
+    , types-common
+    , uuid
+    , wire-api
+
+  hs-source-dirs:     test
+  default-language:   Haskell2010
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
+  default-extensions:
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
