Drop the `managed` Column from `team_conv` Table in Galley (#2127)
* Drop the `managed` column from `team_conv` table

* Improve the description of the managed key

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -661,6 +661,7 @@ executable galley-schema
     V69_MLSProposal
     V70_MLSCipherSuite
     V71_MemberClientKeypackage
+    V72_DropManagedConversations
 
   hs-source-dirs:     schema/src
   default-extensions:
