--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -325,6 +325,10 @@ http {
       proxy_pass http://galley;
     }
 
+    location ~* /legalhold/conversations/(.*) {
+      include common_response_with_zauth.conf;
+      proxy_pass http://galley;
+    }
 
     location /conversations {
       include common_response_with_zauth.conf;
