--- a/libs/jwt-tools/jwt-tools.cabal
+++ b/libs/jwt-tools/jwt-tools.cabal
@@ -71,6 +71,7 @@ library
     , string-conversions
     , transformers
     , types-common
+    , unliftio
     , wire-api
 
   default-language:   Haskell2010
@@ -78,9 +79,6 @@ library
   extra-libraries:
     rusty_jwt_tools_ffi
     pthread
-
--- executable-dynamic: True
--- shared:             True
 
 test-suite jwt-tools-tests
   main-is:            Spec.hs
