--- a/libs/wai-utilities/wai-utilities.cabal
+++ b/libs/wai-utilities/wai-utilities.cabal
@@ -15,6 +15,7 @@ library
   exposed-modules:
     Network.Wai.Utilities
     Network.Wai.Utilities.Error
+    Network.Wai.Utilities.Headers
     Network.Wai.Utilities.MockServer
     Network.Wai.Utilities.Request
     Network.Wai.Utilities.Response
@@ -83,9 +84,11 @@ library
     , metrics-wai            >=0.5.7
     , pipes                  >=4.1
     , prometheus-client
+    , servant-server
     , streaming-commons      >=0.1
     , string-conversions
-    , swagger                >=0.1
+    , swagger
+    , swagger2
     , text                   >=0.11
     , tinylog                >=0.8
     , types-common           >=0.12
