--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -209,6 +209,7 @@ library
     , file-embed-lzma
     , filepath                   >=1.3
     , fsnotify                   >=0.2
+    , galley
     , galley-types               >=0.75.3
     , geoip2                     >=0.3.1.0
     , gundeck-types              >=1.32.1
@@ -449,6 +450,24 @@ executable brig-integration
     API.Version
     Federation.End2end
     Federation.Util
+    GalleyTest.API
+    GalleyTest.API.CustomBackend
+    GalleyTest.API.Federation
+    GalleyTest.API.Federation.Util
+    GalleyTest.API.MessageTimer
+    GalleyTest.API.MLS
+    GalleyTest.API.MLS.Util
+    GalleyTest.API.Roles
+    GalleyTest.API.SQS
+    GalleyTest.API.Teams
+    GalleyTest.API.Teams.Feature
+    GalleyTest.API.Teams.LegalHold
+    GalleyTest.API.Teams.LegalHold.DisabledByDefault
+    GalleyTest.API.Util
+    GalleyTest.API.Util.TeamFeature
+    GalleyTest.Main
+    GalleyTest.TestHelpers
+    GalleyTest.TestSetup
     Index.Create
     Main
     Util
@@ -523,6 +542,7 @@ executable brig-integration
     , exceptions
     , federator
     , filepath               >=1.4
+    , galley
     , galley-types
     , gundeck-types
     , hscim
