--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -669,6 +669,7 @@ executable galley-schema
     V70_MLSCipherSuite
     V71_MemberClientKeypackage
     V72_DropManagedConversations
+    V73_GroupInfoBundle
     V73_MemberClientTable
     V74_ExposeInvitationsToTeamAdmin
 
