--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -206,6 +206,7 @@ library
     , extra                      >=1.3
     , galley-types               >=0.65.0
     , gundeck-types              >=1.35.2
+    , hex
     , HsOpenSSL                  >=0.11
     , HsOpenSSL-x509-system      >=0.1
     , http-client                >=0.4
