--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -566,6 +566,7 @@ test-suite wire-api-golden-tests
     , containers               >=0.5
     , currency-codes
     , directory
+    , either
     , filepath
     , hscim
     , imports
