Add allow list config to Helm chart

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -79,7 +79,8 @@ config:
       validateSAMLemails:
         defaults:
           status: enabled
- 
+      exposeInvitationURLsTeamAllowlist: []
+
   aws:
     region: "eu-west-1"
   proxy: {}
