--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -113,5 +113,8 @@ data:
         mls:
           {{- toYaml .settings.featureFlags.mls | nindent 10 }}
         {{- end }}
+        {{- if .settings.featureFlags.exposeInvitationURLsTeamAllowlist }}
+        exposeInvitationURLsTeamAllowlist: {{ .settings.featureFlags.exposeInvitationURLsTeamAllowlist }}
+        {{- end }}
       {{- end }}
   {{- end }}
