Simplify Galley YAML config
TeamIds are now configured by a list and not a complex object.

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -79,8 +79,7 @@ config:
       validateSAMLemails:
         defaults:
           status: enabled
-      exposeInvitationURLsTeamAllowlist:
-        teams: []
+      exposeInvitationURLsTeamAllowlist: []
 
   aws:
     region: "eu-west-1"
