--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -114,8 +114,7 @@ data:
           {{- toYaml .settings.featureFlags.mls | nindent 10 }}
         {{- end }}
         {{- if .settings.featureFlags.exposeInvitationURLsTeamAllowlist }}
-        exposeInvitationURLsTeamAllowlist:
-          {{- toYaml .settings.featureFlags.exposeInvitationURLsTeamAllowlist | nindent 10 }}
+        exposeInvitationURLsTeamAllowlist: {{- .settings.featureFlags.exposeInvitationURLsTeamAllowlist }}
         {{- end }}
       {{- end }}
   {{- end }}
