--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -425,6 +425,11 @@ http {
       proxy_pass http://galley;
     }
 
+    location /mls/commit-bundles {
+      include common_response_with_zauth.conf;
+      proxy_pass http://galley;
+    }
+
     location /mls/public-keys {
       include common_response_with_zauth.conf;
       proxy_pass http://galley;
