Make custom bool.

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -96,6 +96,7 @@ library
     Brig.Team.DB
     Brig.Team.Email
     Brig.Team.Template
+    Brig.Team.Types
     Brig.Team.Util
     Brig.Template
     Brig.Unique
