--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -26,6 +26,7 @@ config:
   settings:
     httpPoolSize: 128
     maxTeamSize: 10000
+    exposeInvitationURLsTeamAllowlist: []
     maxConvSize: 500
     # Before making indexedBillingTeamMember true while upgrading, please
     # refer to notes here: https://github.com/wireapp/wire-server-deploy/releases/tag/v2020-05-15
@@ -79,7 +80,7 @@ config:
       validateSAMLemails:
         defaults:
           status: enabled
- 
+
   aws:
     region: "eu-west-1"
   proxy: {}
