--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -226,7 +226,7 @@ http {
 
     ## brig authenticated endpoints
 
-    location /self {
+    location ~* (/v[0-9]+)?/self {
       include common_response_with_zauth.conf;
       proxy_pass http://brig;
     }
@@ -261,7 +261,7 @@ http {
       proxy_pass http://brig;
     }
 
-    location /clients {
+    location ~* (/v[0-9]+)?/clients {
       include common_response_with_zauth.conf;
       proxy_pass http://brig;
     }
@@ -454,7 +454,7 @@ http {
       proxy_pass http://gundeck;
     }
 
-    location /notifications {
+    location ~* (/v[0-9]+)?/notifications {
       include common_response_with_zauth.conf;
       proxy_pass http://gundeck;
     }
