--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -325,7 +325,7 @@ http {
       proxy_pass http://galley;
     }
 
-    location ~* /legalhold/conversations/(.*) {
+    location ~* (/v[0-9]+)?/legalhold/conversations/(.*) {
       include common_response_with_zauth.conf;
       proxy_pass http://galley;
     }
