fix bug: regex routes match too much

--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -226,7 +226,7 @@ http {
 
     ## brig authenticated endpoints
 
-    location ~* (/v[0-9]+)?/self {
+    location ~* ^(/v[0-9]+)?/self$ {
       include common_response_with_zauth.conf;
       proxy_pass http://brig;
     }
@@ -261,7 +261,7 @@ http {
       proxy_pass http://brig;
     }
 
-    location ~* (/v[0-9]+)?/clients {
+    location ~* ^(/v[0-9]+)?/clients$ {
       include common_response_with_zauth.conf;
       proxy_pass http://brig;
     }
@@ -325,7 +325,7 @@ http {
       proxy_pass http://galley;
     }
 
-    location ~* (/v[0-9]+)?/legalhold/conversations/(.*) {
+    location ~* ^(/v[0-9]+)?/legalhold/conversations/(.*)$ {
       include common_response_with_zauth.conf;
       proxy_pass http://galley;
     }
@@ -454,7 +454,7 @@ http {
       proxy_pass http://gundeck;
     }
 
-    location ~* (/v[0-9]+)?/notifications {
+    location ~* ^(/v[0-9]+)?/notifications$ {
       include common_response_with_zauth.conf;
       proxy_pass http://gundeck;
     }
