--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -214,7 +214,7 @@ http {
       proxy_pass http://brig;
     }
 
-    location ~* ^/teams/invitations/([^/]*)$ {
+    location ~* ^(/v[0-9]+)?/teams/invitations/([^/]*)$ {
       include common_response_no_zauth.conf;
       proxy_pass http://brig;
     }
