--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -17,4 +17,4 @@
 - hint: { lhs: return, rhs: pure }
 ## We want the latter to properly handle signals.
 - error: { name: Use shutdown, lhs: runSettings, rhs: runSettingsWithShutdown }
-- ignore: { name: Use shutdown, within: [Network.Wai.Utilities.Server] }
+- ignore: { name: Use shutdown, within: [Network.Wai.Utilities.Server, Federator.Response] }
