--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -15,3 +15,6 @@
 # custom rules:
 - hint: { lhs: (() <$), rhs: void }
 - hint: { lhs: return, rhs: pure }
+## We want the latter to properly handle signals.
+- error: { name: Use shutdown, lhs: runSettings, rhs: runSettingsWithShutdown }
+- ignore: { name: Use shutdown, within: [Network.Wai.Utilities.Server, Federator.Response] }
