charts/wire-server: enable topology-aware hints.
For wire-server cloud, on kubernetes 1.21+, favour topology-aware routing, which reduces unnecessary inter-availability-zone traffic, reducing latency and AWS costs.

Documentation: https://kubernetes.io/docs/concepts/services-networking/topology-aware-hints/
See SQPIT-1439

--- a/charts/backoffice/templates/service.yaml
+++ b/charts/backoffice/templates/service.yaml
@@ -7,6 +7,8 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    service.kubernetes.io/topology-aware-hints: auto
 spec:
   type: ClusterIP
   ports:
