--- a/libs/libzauth/libzauth/Cargo.toml
+++ b/libs/libzauth/libzauth/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "zauth"
-version = "3.0.0"
+version = "3.1.0"
 authors = ["Wire Swiss GmbH <backend@wire.com>"]
 license = "AGPL-3.0"
 
@@ -11,6 +11,8 @@ name = "zauth"
 asexp           = ">= 0.3"
 rustc-serialize = ">= 0.3"
 sodiumoxide     = "^0.2.7"
+regex           = "1.6"
+lazy_static     = "1.4"
 
 [dev-dependencies]
 clap = ">= 2.0"
