--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -92,6 +92,7 @@ library
     Wire.API.Routes.QualifiedCapture
     Wire.API.Routes.Version
     Wire.API.Routes.Version.Wai
+    Wire.API.Routes.Versioned
     Wire.API.Routes.WebSocket
     Wire.API.ServantProto
     Wire.API.Swagger
