https://wearezeta.atlassian.net/browse/FS-970 (WIP)

--- a/cabal.project
+++ b/cabal.project
@@ -43,6 +43,7 @@ packages:
   , tools/api-simulations/
   , tools/db/assets/
   , tools/db/auto-whitelist/
+  , tools/db/clients-without-prekeys/
   , tools/db/migrate-sso-feature-flag/
   , tools/db/service-backfill/
   , tools/db/billing-team-member-backfill/
@@ -194,6 +195,8 @@ package cannon
 package cargohold
     ghc-options: -Werror
 package cargohold-types
+    ghc-options: -Werror
+package clients-without-prekeys
     ghc-options: -Werror
 package cassandra-util
     ghc-options: -Werror
