--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -330,7 +330,7 @@ http {
       proxy_pass http://galley;
     }
 
-    location /conversations {
+    location ~* ^(/v[0-9]+)?/conversations.* {
       include common_response_with_zauth.conf;
       proxy_pass http://galley;
     }
