--- a/tools/stern/stern.cabal
+++ b/tools/stern/stern.cabal
@@ -19,6 +19,7 @@ library
     Main
     Stern.API
     Stern.API.Predicates
+    Stern.API.Routes
     Stern.App
     Stern.Intra
     Stern.Options
@@ -93,9 +94,14 @@ library
     , metrics-wai            >=0.3
     , mtl                    >=2.1
     , schema-profunctor
+    , servant
+    , servant-server
+    , servant-swagger
+    , servant-swagger-ui
     , split                  >=0.2
     , string-conversions
-    , swagger                >=0.3
+    , swagger
+    , swagger2
     , text                   >=1.1
     , tinylog                >=0.10
     , transformers           >=0.3
