create lib for querying all clients without prekeys from Cassandra

--- a/tools/db/clients-without-prekeys/clients-without-prekeys.cabal
+++ b/tools/db/clients-without-prekeys/clients-without-prekeys.cabal
@@ -13,6 +13,7 @@ library
   hs-source-dirs:     src
   exposed-modules:
     ClientsWithoutPrekeys.Cache
+    ClientsWithoutPrekeys.Clients
     ClientsWithoutPrekeys.Data
     ClientsWithoutPrekeys.GrafanaLogs
 
