--- a/libs/brig-types/brig-types.cabal
+++ b/libs/brig-types/brig-types.cabal
@@ -84,6 +84,7 @@ library
     , deriving-swagger2      >=0.1.0
     , imports
     , QuickCheck             >=2.9
+    , schema-profunctor
     , servant-server         >=0.18.2
     , servant-swagger        >=1.1.10
     , string-conversions
@@ -165,6 +166,7 @@ test-suite brig-types-tests
     , QuickCheck             >=2.9
     , swagger2               >=2.5
     , tasty
+    , tasty-hunit
     , tasty-quickcheck
     , text                   >=0.11
     , time                   >=1.1
