--- a/libs/galley-types/galley-types.cabal
+++ b/libs/galley-types/galley-types.cabal
@@ -84,6 +84,7 @@ library
     , QuickCheck
     , schema-profunctor
     , string-conversions
+    , swagger2
     , tagged
     , text                   >=0.11
     , time                   >=1.4
