Polysemise Brig.Provider.API.deleteBot
- This commit doesn't compile, but only due to the -Werror flag. Use
sites of deleteBot are commented out as they're wrapped in conduits. The
next step is to handle that.

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -64,6 +64,8 @@ library
     Brig.Effects.BlacklistStore.Cassandra
     Brig.Effects.BudgetStore
     Brig.Effects.BudgetStore.Cassandra
+    Brig.Effects.ClientStore
+    Brig.Effects.ClientStore.Cassandra
     Brig.Effects.CodeStore
     Brig.Effects.CodeStore.Cassandra
     Brig.Effects.Common
