--- a/cabal.project
+++ b/cabal.project
@@ -145,6 +145,12 @@ source-repository-package
 
 source-repository-package
     type: git
+    location: https://github.com/wireapp/tasty
+    tag: 394943c7672e5ad269e5587528b7678caf3b0720
+    subdir: hunit
+
+source-repository-package
+    type: git
     location: https://gitlab.com/axeman/cql-io
     tag: c2b6aa995b5817ed7c78c53f72d5aa586ef87c36
 
